<resources>
    <string name="app_name">CreditScoreApp</string>
    <string name="mortgage">Mortgage</string>
    <string name="creditCard">Credit card</string>
    <string name="autoLoan">Auto loan</string>
    <string name="creditUnion">Credit Union</string>
    <string name="paydayLoan">Payday Loan</string>
    <string name="nextPage">Next</string>
    <string name="title_activity_test">test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="about1">
        The basis of this application is to give you an estimate of your
        current credit rating based off of 5 sections which are:
    </string>
    <string name="about2">
        <b>1. Credit application</b> - how many times you have applied for credit.
    </string>
    <string name="about3">
        <b>2. Payment history</b> - do you pay your household bills and loans on time.
    </string>
    <string name="about4">
        <b>3. Amount owed</b> - the amount owed on your current household bills and loans.
    </string>
    <string name="about5">
        <b>4. Types of credit</b> - type of credit you have.
    </string>
    <string name="about6">
        <b>5. Job income</b> - what is your monthly salary.
    </string>
    <string name="about7">
        The application will calculate an estimated credit score based on your answers.
    </string>
    <string name="tip1">
        Set up payment reminders - biggest contributing factor. Some banks offer reminders or
        set up automatic payments.
    </string>
    <string name="tip2">
        Reduce amount of debt you owe - stop using credit cards, make payment plan
        and most available budget for debt towards the highest interest cards first.
    </string>
    <string name="tip3">
        Keep balances low on credit cards.
    </string>
    <string name="tip4">
        Pay your bills on time - how reliable are you.
    </string>
    <string name="tip5">
        Apply for and open new credit accounts as needed.
    </string>
    <string name="tip6">
        Overpay your bills if you can. This will cut your debt
        and improve the chance of successfully getting a loan.
    </string>
    <string name="tip7">
        Check your report for mistakes. It might not always be your fault.
    </string>
    <string name="tip8">
        Withdraw money for the week ahead.
    </string>
    <string name="tip9">
        Don\'t miss a loan repayment. If you are more than thirty days late,
        you will be reported to the ICB and this will remain on your record for
        five years.
    </string>
    <string name="tip10">
        Have your name on the account,
        if you are living with someone and are splitting bills.
    </string>
    <string name="title1">
        Start Calculating
    </string>
    <string name="para1">
        Please use the drop down list to make your choices. There are 8 questions.
        Mark the checkboxes as needed. After doing so, submit your answers using the
        "Calculate Score" button.
    </string>
    <string name="title2">
        Update Answers
    </string>
    <string name="para2">
        You can update your answers at any time by resubmitting the in the "Start Calculating"
        page.
    </string>
</resources>
