<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TipsActivity">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:text="@string/tip1"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:padding="30dp"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="15dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/tip1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:text="@string/tip2"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:padding="30dp"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="15dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/tip2"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:text="@string/tip3"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:padding="30dp"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="15dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/tip3"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:text="@string/tip4"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:padding="30dp"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="15dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/tip4"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:text="@string/tip5"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:padding="30dp"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="15dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/tip5"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:text="@string/tip6"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:padding="30dp"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="15dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/tip6"/>
    </LinearLayout>
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:text="@string/tip7"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:padding="30dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginHorizontal="15dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/tip6"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:text="@string/tip8"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:padding="30dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginHorizontal="15dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/tip6"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:text="@string/tip9"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:padding="30dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginHorizontal="15dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/tip6"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:text="@string/tip10"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:padding="30dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginHorizontal="15dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/tip6"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>