<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AboutActivity">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about1"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about2"
            android:textSize="15sp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about3"
            android:textSize="15sp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about4"
            android:textSize="15sp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about5"
            android:textSize="15sp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about6"
            android:textSize="15sp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about7"
            android:textSize="15sp"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
            android:text="Greater than 600 points"
            android:textSize="20dp"
            android:textAlignment="center"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="15dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/excellent"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
            android:text="Between 460 and 600 points"
            android:textSize="20dp"
            android:padding="10dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/good"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
            android:text="Between 320 and 460 points"
            android:textSize="20dp"
            android:padding="10dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/fair"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
            android:text="Between 170 and 320 points"
            android:textSize="20dp"
            android:padding="10dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/poor"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
               android:text="Less than 170 points"
               android:textSize="20dp"
               android:padding="10dp"
               android:layout_marginHorizontal="15dp"
               android:textAlignment="center"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:background="@color/bad"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
</ScrollView>